<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.aws</groupId>
    <artifactId>log-events-consumer-api</artifactId>
    <version>0.0.8-SNAPSHOT</version>
    <name>log-events-consumer-api</name>
    <description>log-events-consumer-api</description>

    <properties>
        <java.version>17</java.version>
        <jib.version>3.1.4</jib.version>
        <sqs.version>1.12.110</sqs.version>
        <spring-jms.version>5.3.13</spring-jms.version>
        <amazon-sqs-java-messaging-lib.version>1.0.8</amazon-sqs-java-messaging-lib.version>
        <aws-java-sdk-dynamodb.version>1.12.110</aws-java-sdk-dynamodb.version>
        <spring-data-dynamodb.version>5.2.5</spring-data-dynamodb.version>
        <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jms</artifactId>
            <version>${spring-jms.version}</version>
        </dependency>

        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>amazon-sqs-java-messaging-lib</artifactId>
            <version>${amazon-sqs-java-messaging-lib.version}</version>
        </dependency>

        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-sqs</artifactId>
            <version>${sqs.version}</version>
        </dependency>

        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-dynamodb</artifactId>
            <version>${aws-java-sdk-dynamodb.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.boostchicken</groupId>
            <artifactId>spring-data-dynamodb</artifactId>
            <version>${spring-data-dynamodb.version}</version>
        </dependency>

        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-boot-starter</artifactId>
            <version>${springfox-boot-starter.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib.version}</version>
                <configuration>
                    <to>
                        <image>docker.io/pedroulhoa/log-events-product:${project.version}</image>
                    </to>
                    <from>
                        <image>openjdk:17</image>
                    </from>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
